--- a/7. Cấu hình Switch cơ bản.md
+++ b/7. Cấu hình Switch cơ bản.md
@@ -19,7 +19,7 @@ lệnh login để hệ thống bắt đầu kích hoạt mật khẩu ngay lậ
 - Đặt mật khẩu enable:
 ```
   Sw1(config)#enable password 1234
-Sw1(config)#enable secret 123
+  Sw1(config)#enable secret 123
 ```
 Lệnh “enable password” thì mật khẩu ở dạng chuỗi, khi dùng lệnh “show running-config” thì mật khẩu này có thể đọc được.
 Lệnh “enable secret” thì mật khẩu được mã hóa dưới dạng MD5, không thể giải mã ngược lại được.
@@ -27,11 +27,11 @@ Lệnh “enable secret” thì mật khẩu được mã hóa dưới dạng MD
 - Lưu cấu hình từ RAM vào NVRAM:
 ```
   Switch#copy running-config startup-config
-Switch#wr
+  Switch#wr
 ```
 <br/>
-	Khi switch này bị tắt, cấu hình đang sử dụng sẽ bị mất. Bản lưu startup-config sẽ được đọc khi switch khởi động lại và tái tạo lại bản cấu hình cũ. Tuy nhiên, ta nên lưu lại cấu hình của mình trên máy chủ TFTP đề phòng trường hợp NVRAM có thể bị mất hoàn toàn.
-
+Khi switch này bị tắt, cấu hình đang sử dụng sẽ bị mất. Bản lưu startup-config sẽ được đọc khi switch khởi động lại và tái tạo lại bản cấu hình cũ. Tuy nhiên, ta nên lưu lại cấu hình của mình trên máy chủ TFTP đề phòng trường hợp NVRAM có thể bị mất hoàn toàn.  <br/>
+ 
 - Đặt IP cho Switch: Switch là một thiết bị lớp 2. Việc đặt IP address cho switch chỉ nhằm mục đích quản trị. Tất cả các port mặt định của VLAN 1, do đó phải cấu hình cho quản lý switch dùng VLAN 1.
 ```
   Sw1#conf t
