--- a/7. Cấu hình Switch cơ bản.md
+++ b/7. Cấu hình Switch cơ bản.md
@@ -12,7 +12,8 @@ Sw1(config)#line console 0
 Sw1(config-line)#password kien
 Sw1(config-line)#login
 ```
-Lệnh line console để truy cập vào line console. Còn 0 là thứ tự của cổng muốn cấu hình.
+
+Lệnh line console để truy cập vào line console. Còn 0 là thứ tự của cổng muốn cấu hình.  <br/>
 lệnh login để hệ thống bắt đầu kích hoạt mật khẩu ngay lập tức
 
 
@@ -21,7 +22,7 @@ lệnh login để hệ thống bắt đầu kích hoạt mật khẩu ngay lậ
   Sw1(config)#enable password 1234
   Sw1(config)#enable secret 123
 ```
-Lệnh “enable password” thì mật khẩu ở dạng chuỗi, khi dùng lệnh “show running-config” thì mật khẩu này có thể đọc được.
+Lệnh “enable password” thì mật khẩu ở dạng chuỗi, khi dùng lệnh “show running-config” thì mật khẩu này có thể đọc được.    <br/>
 Lệnh “enable secret” thì mật khẩu được mã hóa dưới dạng MD5, không thể giải mã ngược lại được.
 
 - Lưu cấu hình từ RAM vào NVRAM:
@@ -31,7 +32,8 @@ Lệnh “enable secret” thì mật khẩu được mã hóa dưới dạng MD
 ```
 <br/>
 Khi switch này bị tắt, cấu hình đang sử dụng sẽ bị mất. Bản lưu startup-config sẽ được đọc khi switch khởi động lại và tái tạo lại bản cấu hình cũ. Tuy nhiên, ta nên lưu lại cấu hình của mình trên máy chủ TFTP đề phòng trường hợp NVRAM có thể bị mất hoàn toàn.  <br/>
- 
+
+ <br/>
 - Đặt IP cho Switch: Switch là một thiết bị lớp 2. Việc đặt IP address cho switch chỉ nhằm mục đích quản trị. Tất cả các port mặt định của VLAN 1, do đó phải cấu hình cho quản lý switch dùng VLAN 1.
 ```
   Sw1#conf t
@@ -39,12 +41,12 @@ Khi switch này bị tắt, cấu hình đang sử dụng sẽ bị mất. Bản
   Sw1(config-if)#ip address 191.168.10.18 255.255.255.0
 ```
 
-- Đặt default gateway cho Switch: Vì switch không thể cấu hình giao thức định tuyến, nên để tới tất cả các mạng, ta phải cấu hình một địa chỉ gateway mặc định để gửi tất cả lưu lượng khi ta cần liên lạc giữa các VLAN.
+- Đặt default gateway cho Switch: Vì switch không thể cấu hình giao thức định tuyến, nên để tới tất cả các mạng, ta phải cấu hình một địa chỉ gateway mặc định để gửi tất cả lưu lượng khi ta cần liên lạc giữa các VLAN.   <br/>
 	```Sw1(config)#ip default-gateway 10.1.1.1```
 
 - Thay đổi tốc độ của cổng:  ```Sw1(config-if)#speed 10``` ( Đặt tốc độ là 10Mb )
 
-- Tắt/bật interface: Dùng lệnh no shutdown/shutdown
+- Tắt/bật interface: Dùng lệnh no shutdown/shutdown     <br/>
 	```Sw1(config-if)#shutdown```
 
 ![Imgur](https://i.imgur.com/lQcpvVW.png)
