--- a/7. Cấu hình Switch cơ bản.md
+++ b/7. Cấu hình Switch cơ bản.md
@@ -1,8 +1,8 @@
-- Xem cấu hình Switch: Sw1#show running-config 
+- Xem cấu hình Switch: ```Sw1#show running-config```
 
-- Xem tình trạng các cổng Switch: Sw1# show interfaces status 
+- Xem tình trạng các cổng Switch: ```Sw1# show interfaces status``` 
 
--  Đặt tên cho Switch: ```Switch(config)#hostname Sw1```
+- Đặt tên cho Switch: ```Switch(config)#hostname Sw1```
 
 ![Imgur](https://i.imgur.com/jxHZyHc.png)
 
@@ -14,7 +14,7 @@ Sw1(config-line)#login
 ```
 
 Lệnh line console để truy cập vào line console. Còn 0 là thứ tự của cổng muốn cấu hình.  <br/>
-lệnh login để hệ thống bắt đầu kích hoạt mật khẩu ngay lập tức
+Lệnh login để hệ thống bắt đầu kích hoạt mật khẩu ngay lập tức
 
 
 - Đặt mật khẩu enable:
@@ -34,6 +34,7 @@ Lệnh “enable secret” thì mật khẩu được mã hóa dưới dạng MD
 Khi switch này bị tắt, cấu hình đang sử dụng sẽ bị mất. Bản lưu startup-config sẽ được đọc khi switch khởi động lại và tái tạo lại bản cấu hình cũ. Tuy nhiên, ta nên lưu lại cấu hình của mình trên máy chủ TFTP đề phòng trường hợp NVRAM có thể bị mất hoàn toàn.  <br/>
 
  <br/>
+ 
 - Đặt IP cho Switch: Switch là một thiết bị lớp 2. Việc đặt IP address cho switch chỉ nhằm mục đích quản trị. Tất cả các port mặt định của VLAN 1, do đó phải cấu hình cho quản lý switch dùng VLAN 1.
 ```
   Sw1#conf t
