--- a/3. VLAN.md
+++ b/3. VLAN.md
@@ -75,8 +75,10 @@ Switch(config-if) #switchport access vlan 2
 <br/>
 
 **Lưu ý:**  <br/>
->> Mode access dành cho port kết nối với PC <br/>
->> Gán một dải port cho VLAN: `interface range fa 0/1-2, fa 0/5`
+> Mode access dành cho port kết nối với PC <br/>
+> Gán một dải port cho VLAN: `interface range fa 0/1-2, fa 0/5`
+
+<br/>
 
 * Xóa VLAN: Ở chế độ config: `Switch(config) # no vlan 2`   hoặc  `Switch(config) #no vlan 2-5, 9`  để xóa một dải
 	Các port thuộc VLAN bị xóa sẽ không thuộc VLAN nào nữa. Nếu tạo lại VLAN vừa bị xóa thì các port sẽ tự quay lại VLAN
