--- a/8. Inter VLAN Routing trên Firewall Fortigate.md
+++ b/8. Inter VLAN Routing trên Firewall Fortigate.md
@@ -1,6 +1,6 @@
 - Mô hình:
 
-![Imgur](https://imgur.com/AWrpgqT)
+![Imgur](https://i.imgur.com/RQORyUQ.png)
 
 - Gán IP cho 2 Laptop, đặt default gateway ở firewall.
 
