--- a/8. Inter VLAN Routing trên Firewall Fortigate.md
+++ b/8. Inter VLAN Routing trên Firewall Fortigate.md
@@ -4,9 +4,9 @@
 
 - Gán IP cho 2 Laptop, đặt default gateway ở firewall.
 
-![Imgur](https://imgur.com/OTRKTu3)
+![Imgur](https://i.imgur.com/OTRKTu3.png)
 
-![Imgur](https://imgur.com/ZFMPjrd)
+![Imgur](https://i.imgur.com/ZFMPjrd.png)
 
 - Tại Switch: 
 + Tạo 2 vlan 10 và vlan 20 access vào port gi1/0/1 và gi1/0/2.
@@ -15,10 +15,10 @@
 - Tại Firewall:
 + Tạo 2 sub interface trên internal 2 để làm default gateway. ( vlan 20 tương tự )
 
-![Imgur](https://imgur.com/0p0Ey37)
+![Imgur](https://i.imgur.com/0p0Ey37.png)
 
 + Cấu hình firewall policy để 2 vlan có thể thông qua
 
-![Imgur](https://imgur.com/UCap11d)
+![Imgur](https://i.imgur.com/UCap11d.png)
 
 Nguồn tham khảo: https://www.youtube.com/watch?v=LbDfiwbiN6Q
